header section complete

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li><a href="#">Resources</a></li>
           </ul>
           <div class="nav-links-extreme">
-            <a href="#" class="nav-links">Login</a>
+            <a href="#" class="nav-link">Login</a>
             <a href="#" class="primary-btn-link">Sign Up</a>
           </div>
         </nav>
@@ -69,7 +69,7 @@
         <div class="hero-section-image">
           <img src="./images/illustration-working.svg" alt="hero image" />
         </div>
-        <div class="hero-bottom">
+        <!-- <div class="hero-bottom">
           <div class="hero-form">
             <form action="#">
               <div class="form-group">
@@ -106,7 +106,7 @@
               </li>
             </ul>
           </div>
-        </div>
+        </div> -->
       </section>
       <section class="pre-nav">
         <h2 class="about-main-heading nav-heading">
@@ -137,5 +137,6 @@
         >. Coded by <a href="#">Codewarsfx</a>.
       </div>
     </div>
+    <script src="./js/index.js"></script>
   </body>
 </html>
