--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
             shorter links
           </h1>
           <p class="hero-section-content-secondary">
-            Build your brand’s recognition and get detailed <br />
-            insights on how your links are performing
+            Build your brand’s recognition and <br />
+            get detailed insights on how your <br />
+            links are performing
           </p>
           <a href="#" class="primary-btn-link primary-btn-link-mod"
             >Get Started</a
