--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
             shorter links
           </h1>
           <p class="hero-section-content-secondary">
-            Build your brand’s recognition and <br />
-            get detailed insights on how your <br />
+            Build your brand’s recognition and get detailed insights on how your
             links are performing
           </p>
           <a href="#" class="primary-btn-link primary-btn-link-mod"
@@ -69,54 +68,45 @@
         <div class="hero-section-image">
           <img src="./images/illustration-working.svg" alt="hero image" />
         </div>
-        <!-- <div class="hero-bottom">
+        <div class="hero-bottom">
           <div class="hero-form">
             <form action="#">
               <div class="form-group">
-                <input type="text" class="form-group-input" />
+                <input
+                  type="text"
+                  class="form-group-input"
+                  placeholder="Shorten a link here..."
+                />
                 <button class="form-group-button">Shorten It!</button>
               </div>
             </form>
           </div>
-          <div class="hero-form-result">
-            <ul class="form-result-list">
-              <li>
-                <span class="list-link"
-                  >http//wwww.hbfbvsbbwubfbwnvnvjr.com</span
-                ><span class="list-link-short"
-                  ><a href="">http/ndfvnnebrbrbnjfnjrnnw.com</a
-                  ><button>Copy</button></span
-                >
-              </li>
-              <li>
-                <span class="list-link"
-                  >http//wwww.hbfbvsbbwubfbwnvnvjr.com</span
-                ><span class="list-link-short"
-                  ><a href="">http/ndfvnnebrbrbnjfnjrnnw.com</a
-                  ><button>Copy</button></span
-                >
-              </li>
-              <li>
-                <span class="list-link"
-                  >http//wwww.hbfbvsbbwubfbwnvnvjr.com</span
-                ><span class="list-link-short"
-                  ><a href="">http/ndfvnnebrbrbnjfnjrnnw.com</a
-                  ><button>Copy</button></span
-                >
-              </li>
-            </ul>
-          </div>
-        </div> -->
+        </div>
       </section>
-      <section class="pre-nav">
+      <!-- <section class="pre-nav">
         <h2 class="about-main-heading nav-heading">
           Boost your links today
         </h2>
         <a href="#" class="primary-btn-link primary-btn-link-mod nav-cta"
           >Get Started</a
         >
-      </section>
-
+      </section> -->
+      <!-- <div class="hero-form-result">
+  <ul class="form-result-list">
+    <li>
+      <span class="list-link">http//wwww.hbfbvsbbwubfbwnvnvjr.com</span><span class="list-link-short"><a
+          href="">http/ndfvnnebrbrbnjfnjrnnw.com</a><button>Copy</button></span>
+    </li>
+    <li>
+      <span class="list-link">http//wwww.hbfbvsbbwubfbwnvnvjr.com</span><span class="list-link-short"><a
+          href="">http/ndfvnnebrbrbnjfnjrnnw.com</a><button>Copy</button></span>
+    </li>
+    <li>
+      <span class="list-link">http//wwww.hbfbvsbbwubfbwnvnvjr.com</span><span class="list-link-short"><a
+          href="">http/ndfvnnebrbrbnjfnjrnnw.com</a><button>Copy</button></span>
+    </li>
+  </ul>
+</div> -->
       <!-- Features Pricing Resources Login Sign Up More than just shorter links Build
     your brand’s recognition and get detailed insights on how your links are
     performing. Get Started Shorten It! Advanced Statistics Track how your links
@@ -130,12 +120,12 @@
     links today Get Started Features Link Shortening Branded Links Analytics
     Resources Blog Developers Support Company About Our Team Careers Contact -->
 
-      <div class="attribution">
+      <!-- <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">Codewarsfx</a>.
-      </div>
+      </div> -->
     </div>
     <script src="./js/index.js"></script>
   </body>
