--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        margin-top: 2em;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -83,31 +84,87 @@
           </div>
         </div>
       </section>
-      <!-- <section class="pre-nav">
-        <h2 class="about-main-heading nav-heading">
-          Boost your links today
-        </h2>
-        <a href="#" class="primary-btn-link primary-btn-link-mod nav-cta"
-          >Get Started</a
-        >
-      </section> -->
-      <!-- <div class="hero-form-result">
-  <ul class="form-result-list">
-    <li>
-      <span class="list-link">http//wwww.hbfbvsbbwubfbwnvnvjr.com</span><span class="list-link-short"><a
-          href="">http/ndfvnnebrbrbnjfnjrnnw.com</a><button>Copy</button></span>
-    </li>
-    <li>
-      <span class="list-link">http//wwww.hbfbvsbbwubfbwnvnvjr.com</span><span class="list-link-short"><a
-          href="">http/ndfvnnebrbrbnjfnjrnnw.com</a><button>Copy</button></span>
-    </li>
-    <li>
-      <span class="list-link">http//wwww.hbfbvsbbwubfbwnvnvjr.com</span><span class="list-link-short"><a
-          href="">http/ndfvnnebrbrbnjfnjrnnw.com</a><button>Copy</button></span>
-    </li>
-  </ul>
-</div> -->
-      <!-- Features Pricing Resources Login Sign Up More than just shorter links Build
+    </div>
+    <section class="results">
+      <div class="wrapper">
+        <div class="hero-form-result">
+          <ul class="form-result-list">
+            <li>
+              <span class="list-link"
+                ><a href=""> http//wwww.hbfbvsbbwubfbwnvnvjr.com</a></span
+              ><span class="list-link-short"
+                ><a href="">http/ndfvnnebrbrbnjfnjrnnw.com</a
+                ><button>Copy</button></span
+              >
+            </li>
+            <li>
+              <span class="list-link">
+                <a href="#"> http//wwww.hbfbvsbbwubfbwnvnvjr.com</a></span
+              ><span class="list-link-short"
+                ><a href="">http/ndfvnnebrbrbnjfnjrnnw.com</a
+                ><button>Copy</button></span
+              >
+            </li>
+            <li>
+              <span class="list-link">
+                <a href=""> http//wwww.hbfbvsbbwubfbwnvnvjr.com </a></span
+              ><span class="list-link-short"
+                ><a href="">http/ndfvnnebrbrbnjfnjrnnw.com</a
+                ><button>Copy</button></span
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="results-stats">
+          <h2 class="results-stats-header">Advanced Statistics</h2>
+          <p class="hero-section-content-secondary results-stats-paragraph">
+            Track how your Links are Performing across the web with our advanced
+            statistics dash board
+          </p>
+          <div class="results-stats-cards">
+            <div class="results-stat-card">
+              <div class="results-stat-img">
+                <img src="./images/icon-brand-recognition.svg" alt="" />
+              </div>
+              <div class="results-stat-card-content">
+                <h3>Brand Recognition</h3>
+                <p>
+                  Boost your brand recognition with each click. Generic links
+                  don’t mean a thing. Branded links help instil confidence in
+                  your content.
+                </p>
+              </div>
+            </div>
+            <div class="results-stat-card">
+              <div class="results-stat-img">
+                <img src="./images/icon-detailed-records.svg" alt="" />
+              </div>
+              <div class="results-stat-card-content">
+                <h3>Detailed Records</h3>
+                <p>
+                  Gain insights into who is clicking your links. Knowing when
+                  and where people engage with your content helps inform better
+                  decisions.
+                </p>
+              </div>
+            </div>
+            <div class="results-stat-card">
+              <div class="results-stat-img">
+                <img src="./images/icon-fully-customizable.svg" alt="" />
+              </div>
+              <div class="results-stat-card-content">
+                <h3>Fully Customizable</h3>
+                <p>
+                  Improve brand awareness and content discoverability through
+                  customizable links, supercharging audience engagement
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Features Pricing Resources Login Sign Up More than just shorter links Build
     your brand’s recognition and get detailed insights on how your links are
     performing. Get Started Shorten It! Advanced Statistics Track how your links
     are performing across the web with our advanced statistics dashboard. Brand
@@ -120,13 +177,61 @@
     links today Get Started Features Link Shortening Branded Links Analytics
     Resources Blog Developers Support Company About Our Team Careers Contact -->
 
-      <!-- <div class="attribution">
+    <section class="pre-nav">
+      <div class="wrapper wrapper-mod">
+        <h1 class="about-main-heading nav-heading">
+          Boost your links today
+        </h1>
+        <a href="#" class="primary-btn-link primary-btn-link-mod nav-cta"
+          >Get Started</a
+        >
+      </div>
+    </section>
+
+    <footer>
+      <div class="wrapper wrapper-nav">
+        <div class="nav-logo"><h3>Shortly</h3></div>
+        <div class="footer-nav">
+          <div class="footer-nav-list">
+            <p>Features</p>
+            <ul class="footer-list">
+              <li><a href="#">Link Shortening</a></li>
+              <li><a href="#">Branded Links</a></li>
+              <li><a href="#">Analytics</a></li>
+            </ul>
+          </div>
+          <div class="footer-nav-list">
+            <p>Resources</p>
+            <ul class="footer-list">
+              <li><a href="#">BLog</a></li>
+              <li><a href="#">Developers</a></li>
+              <li><a href="#">Support</a></li>
+            </ul>
+          </div>
+          <div class="footer-nav-list">
+            <p>Company</p>
+            <ul class="footer-list">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Our Team</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <div class="footer-nav-logo">
+            <img src="./images/icon-facebook.svg" alt="" />
+            <img src="./images/icon-twitter.svg" alt="" />
+            <img src="./images/icon-pinterest.svg" alt="" />
+            <img src="./images/icon-instagram.svg" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Codewarsfx</a>.
-      </div> -->
-    </div>
+        >. Coded by <a href="https://twitter.com/codewarsfx">Codewarsfx</a>.
+      </div>
+    </footer>
     <script src="./js/index.js"></script>
   </body>
 </html>
