--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <ul class="form-result-list">
             <li>
               <span class="list-link"
-                ><a href=""> http//wwww.hbfbvsbbwubfbwnvnvjr.com</a></span
+                ><a href=""> http//wwww.hbfbvnvjr.com</a></span
               ><span class="list-link-short"
                 ><a href="">http/ndfvnnebrbrbnjfnjrnnw.com</a
                 ><button>Copy</button></span
@@ -99,7 +99,7 @@
             </li>
             <li>
               <span class="list-link">
-                <a href="#"> http//wwww.hbfbvsbbwubfbwnvnvjr.com</a></span
+                <a href="#"> http//wwww.hbfbwnvnvjr.com</a></span
               ><span class="list-link-short"
                 ><a href="">http/ndfvnnebrbrbnjfnjrnnw.com</a
                 ><button>Copy</button></span
@@ -107,7 +107,7 @@
             </li>
             <li>
               <span class="list-link">
-                <a href=""> http//wwww.hbfbvsbbwubfbwnvnvjr.com </a></span
+                <a href=""> http//wwww.hbfbvsnvnvjr.com </a></span
               ><span class="list-link-short"
                 ><a href="">http/ndfvnnebrbrbnjfnjrnnw.com</a
                 ><button>Copy</button></span
