--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="wrapper">
         <div class="hero-form-result">
           <ul class="form-result-list">
-            <li>
+            <!-- <li>
               <span class="list-link"
                 ><a href=""> http//wwww.hbfbvnvjr.com</a></span
               ><span class="list-link-short"
@@ -112,7 +112,7 @@
                 ><a href="">http/ndfvnnebrbrbnjfnjrnnw.com</a
                 ><button>Copy</button></span
               >
-            </li>
+            </li> -->
           </ul>
         </div>
         <div class="results-stats">
@@ -228,10 +228,14 @@
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="https://twitter.com/codewarsfx">Codewarsfx</a>.
+          >Frontend Mentor. </a
+        >. Coded by
+        <a href="https://twitter.com/codewarsfx"> &copy Codewarsfx</a> <br />
+        <small>Api in use @rebrandly</small>
       </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/click.js"></script>
   </body>
 </html>
