--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/f673f835d1.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="wrapper">
@@ -70,6 +74,7 @@
           <img src="./images/illustration-working.svg" alt="hero image" />
         </div>
         <div class="hero-bottom">
+          <!-- <img src="./images/" alt=""> -->
           <div class="hero-form">
             <form action="#">
               <div class="form-group">
@@ -88,13 +93,14 @@
     <section class="results">
       <div class="wrapper">
         <div class="hero-form-result">
+          <div class="loader"><i class="fas fa-spinner"></i></div>
           <ul class="form-result-list">
             <!-- <li>
               <span class="list-link"
                 ><a href=""> http//wwww.hbfbvnvjr.com</a></span
               ><span class="list-link-short"
                 ><a href="">http/ndfvnnebrbrbnjfnjrnnw.com</a
-                ><button>Copy</button></span
+                ><button class='copy-button'>Copy</button></span
               >
             </li>
             <li>
@@ -102,7 +108,7 @@
                 <a href="#"> http//wwww.hbfbwnvnvjr.com</a></span
               ><span class="list-link-short"
                 ><a href="">http/ndfvnnebrbrbnjfnjrnnw.com</a
-                ><button>Copy</button></span
+                ><button class='copy-button'>Copy</button></span
               >
             </li>
             <li>
@@ -164,19 +170,6 @@
         </div>
       </div>
     </section>
-    <!-- Features Pricing Resources Login Sign Up More than just shorter links Build
-    your brand’s recognition and get detailed insights on how your links are
-    performing. Get Started Shorten It! Advanced Statistics Track how your links
-    are performing across the web with our advanced statistics dashboard. Brand
-    Recognition Boost your brand recognition with each click. Generic links
-    don’t mean a thing. Branded links help instil confidence in your content.
-    Detailed Records Gain insights into who is clicking your links. Knowing when
-    and where people engage with your content helps inform better decisions.
-    Fully Customizable Improve brand awareness and content discoverability
-    through customizable links, supercharging audience engagement. Boost your
-    links today Get Started Features Link Shortening Branded Links Analytics
-    Resources Blog Developers Support Company About Our Team Careers Contact -->
-
     <section class="pre-nav">
       <div class="wrapper wrapper-mod">
         <h1 class="about-main-heading nav-heading">
