client side input validation

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   </head>
   <body>
     <div class="wrapper">
+      <!-- header section markup -->
       <header>
         <div class="header-logo">
           <img src="./images/logo.svg" alt="logo" />
@@ -56,6 +57,9 @@
           <div class="stick3"></div>
         </div>
       </header>
+      <!-- end of header mark up -->
+
+      <!-- hero section mark up -->
       <section class="hero">
         <div class="hero-section-content">
           <h1 class="hero-section-content-header">
@@ -74,12 +78,11 @@
           <img src="./images/illustration-working.svg" alt="hero image" />
         </div>
         <div class="hero-bottom">
-          <!-- <img src="./images/" alt=""> -->
           <div class="hero-form">
             <form action="#">
               <div class="form-group">
                 <input
-                  type="text"
+                  type="url"
                   class="form-group-input"
                   placeholder="Shorten a link here..."
                 />
@@ -89,6 +92,7 @@
           </div>
         </div>
       </section>
+      <!-- end of hero section -->
     </div>
     <section class="results">
       <div class="wrapper">
@@ -172,15 +176,13 @@
     </section>
     <section class="pre-nav">
       <div class="wrapper wrapper-mod">
-        <h1 class="about-main-heading nav-heading">
-          Boost your links today
-        </h1>
+        <h1 class="about-main-heading nav-heading">Boost your links today</h1>
         <a href="#" class="primary-btn-link primary-btn-link-mod nav-cta"
           >Get Started</a
         >
       </div>
     </section>
-
+    <!-- footer section markup -->
     <footer>
       <div class="wrapper wrapper-nav">
         <div class="nav-logo"><h3>Shortly</h3></div>
@@ -227,6 +229,7 @@
         <small>Api in use @rebrandly</small>
       </div>
     </footer>
+    <!-- end of footer section markup -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/click.js"></script>
